<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Walking Tour Creator</string>
    <string name="app_details">Walking Tour Creator\nVersion 1\n\nCreators\nTeam Leader\nSevastiyan Raychev\n\nQA Team\nBenjamin O\'Donovan\nNeil Vicker\n\nAndroid Team\nWilliam Lea\nHarvey Clark\n\nWeb Team\nWilliam Arslett\nStephen Clasby</string><string name="title_activity_main">MainActivity</string>
    <string name="title_activity_recorded">Recorded Walks</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="action_sample_rate">Sample Rate</string>
    <string name="action_add_loc">Add Location</string>
    <string name="action_rem_loc">Remove Location</string>
    <string name="action_cancel">Cancel Walk</string>
    <string name="action_finish">Finish Walk</string>
    <string name="action_sample_five">10 Seconds</string>
    <string name="action_sample_ten">15 Seconds</string>
    <string name="action_sample_fifteen">20 Seconds</string>
    <string name="action_add_photo">Add Photo</string><string name="action_remove_photo">Remove Photo</string><string name="button_new_walk">New Walk</string>
    <string name="button_about">About</string>
    <string name="hint_walk_name">Walk Name</string>
    <string name="hint_short_desc">Short Description</string>
    <string name="hint_long_desc">Long Description</string>
    <string name="hint_loc_name">Location Name</string><string name="hint_loc_desc">Location Description</string><string name="image_title_logo">WTC Main Logo</string>
    
    
    
    
    

</resources>
